WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
14157
Rotated shape has wrong gradient rendering
https://bugs.webkit.org/show_bug.cgi?id=14157
Summary
Rotated shape has wrong gradient rendering
Antoine Quint
Reported
2007-06-14 23:18:09 PDT
The same shape filled with a gradient renders differently whether it is rotated or not.
Attachments
testcase
(483 bytes, image/svg+xml)
2007-06-14 23:19 PDT
,
Antoine Quint
no flags
Details
First attempt
(49.42 KB, patch)
2007-06-19 09:30 PDT
,
Rob Buis
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2007-06-14 23:19:53 PDT
Created
attachment 15041
[details]
testcase A rotated rectangle with a gradient, works fine in Opera 9 and Firefox 3.
Rob Buis
Comment 2
2007-06-19 09:30:13 PDT
Created
attachment 15119
[details]
First attempt This testcase found led me to something we failed to read in the spec, no objectBoundingBox mode when width and/or height is zero. Cheers, Rob.
Eric Seidel (no email)
Comment 3
2007-06-20 00:09:10 PDT
Comment on
attachment 15119
[details]
First attempt r=me, looks sane enough.
Rob Buis
Comment 4
2007-06-20 09:31:38 PDT
Landed in
r23650
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug