        Reviewed by Eric.

http://bugs.webkit.org/show_bug.cgi?id=14157
        Rotated shape has wrong gradient rendering

        Use the untransformed bbox in objectBoundingBoxMode. Also
        don't do objectBoundingBoxMode should the bbox width ort height
        be zero.



Canonical link: https://commits.webkit.org/20403@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26413 268f45cc-cd09-0410-ab3c-d52691b4dbfc